[package]
name = "tanmatsu"
version = "0.1.0"
authors = ["r00ster91 <r00ster91@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target = "redox"))'.dependencies]
crossterm = "0.19"

[target.'cfg(target = "redox")'.dependencies]
termion = "1.5"
